[gd_scene load_steps=18 format=3 uid="uid://c8kpdy44l86t1"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_0ghv5"]
[ext_resource type="Texture2D" uid="uid://dhqhdyxgptftu" path="res://Assets/General/general_sprite_sheet.png" id="1_mf0ga"]
[ext_resource type="Script" path="res://Scripts/Util/StateMachine.gd" id="3_birp5"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerIdle.gd" id="4_khh7x"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerRight.gd" id="4_ndwkk"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerLeft.gd" id="5_xnudq"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerDown.gd" id="6_m6f4e"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerUp.gd" id="7_821rk"]
[ext_resource type="Script" path="res://Scripts/Player/States/DeathState.gd" id="9_0ifbw"]

[sub_resource type="Animation" id="Animation_7fjt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4hj0o"]
resource_name = "death"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_mx5h0"]
resource_name = "down"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 46, 45]
}

[sub_resource type="Animation" id="Animation_njmsh"]
resource_name = "left"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 1), Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_khmo4"]
resource_name = "right"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_l4mta"]
resource_name = "up"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 31, 30]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2yq5"]
_data = {
"RESET": SubResource("Animation_7fjt3"),
"death": SubResource("Animation_4hj0o"),
"down": SubResource("Animation_mx5h0"),
"left": SubResource("Animation_njmsh"),
"right": SubResource("Animation_khmo4"),
"up": SubResource("Animation_l4mta")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jfn7b"]
radius = 6.9

[node name="Player" type="CharacterBody2D"]
safe_margin = 0.001
script = ExtResource("1_0ghv5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(2.08165e-12, 0.5)
texture = ExtResource("1_mf0ga")
hframes = 15
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2yq5")
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jfn7b")

[node name="BackRayCast2D" type="RayCast2D" parent="."]
position = Vector2(7, 0)
target_position = Vector2(0, -9)
collision_mask = 2

[node name="MiddleRayCast2D" type="RayCast2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
target_position = Vector2(-2.08165e-12, -9)
collision_mask = 2

[node name="FrontRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(0, -9)
collision_mask = 2

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_birp5")
starting_state = NodePath("IdleState")

[node name="RightState" type="Node" parent="StateMachine" node_paths=PackedStringArray("left_state", "up_state", "down_state")]
script = ExtResource("4_ndwkk")
left_state = NodePath("../LeftState")
up_state = NodePath("../UpState")
down_state = NodePath("../DownState")
animation_name = "right"

[node name="LeftState" type="Node" parent="StateMachine" node_paths=PackedStringArray("right_state", "up_state", "down_state")]
script = ExtResource("5_xnudq")
right_state = NodePath("../RightState")
up_state = NodePath("../UpState")
down_state = NodePath("../DownState")
animation_name = "left"

[node name="DownState" type="Node" parent="StateMachine" node_paths=PackedStringArray("left_state", "right_state", "up_state")]
script = ExtResource("6_m6f4e")
left_state = NodePath("../LeftState")
right_state = NodePath("../RightState")
up_state = NodePath("../UpState")
animation_name = "down"

[node name="UpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("left_state", "right_state", "down_state")]
script = ExtResource("7_821rk")
left_state = NodePath("../LeftState")
right_state = NodePath("../RightState")
down_state = NodePath("../DownState")
animation_name = "up"

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("left_state", "right_state")]
script = ExtResource("4_khh7x")
left_state = NodePath("../LeftState")
right_state = NodePath("../RightState")
wait_time = 4.0
animation_name = "RESET"

[node name="DeathState" type="Node" parent="StateMachine"]
script = ExtResource("9_0ifbw")
animation_name = "death"
